# 3d-automata

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
shaders/: Cell.shader  Cube.shader
src/: IndexBuffer.cpp  Renderer.cpp  Run.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  main.cpp
src/include/: IndexBuffer.h  Renderer.h  Run.h  Shader.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
